# mff-stuff

./: FileExists.cs  README.md  todo.txt
CGI/assignment 122/: Construction.lines.cs
DBA/: todo.txt
DBA/odezvdavaci skripty/: 2. testovaci_skript.sql  smaz_vsechno.bat  testovaci_data.sql  vytvor_vsechno.bat
Haskell/hw2/: .gitignore  build.bat  build.sh  todo.txt
Weby/zapoc/: add_item.php  change_order.php  client.js  db.php  delete_item.php  edit_amount.php  index.php  shopping_list.php  styles.css
XML/: data.dtd  data.xml
XML/hw3/: data.dtd  data.xml  data.xsd
XML/hw6/: MainDom.java  data.xml  data2html.xsl
bc/DBA/: todo.txt
bc/combinatorial-optimization/big-hw/prog/: CMakeLists.txt
bc/combinatorial-optimization/big-hw/prog/include/: lpgenerator.hpp  lpgenerator1.hpp  lpgenerator2.hpp  parser.hpp  parser1.hpp  parser2.hpp  utils.hpp
bc/combinatorial-optimization/big-hw/prog/src/: lpgenerator1.cpp  lpgenerator2.cpp  main.cpp  parser1.cpp  parser2.cpp  utils.cpp
bc/haskell/hw2/submission/Levy2/: Levy2.cabal
bc/haskell/hw2/submission/Levy2/src/: Common.hs  TokenParser.hs
framework/build.gcc/: du3456g.cpp  du3456g.hpp  du3456g.output  du3456g.tab.hh  du3456l.cpp
framework/build.vc141/: ahoj.h  du12.vcxproj  du12grm.vcxproj  du12grm.vcxproj.filters  du12l.cpp  lex.backup
framework/private-src/: du12l.lex  du3456g.tab.cc  du3456g.y  du3456l.lex  du3456sem.cpp
framework/public-tests/: du3-test21.mls  muj.mls
odezvdavaci skripty/: vytvoreni_statistik.txt  zruseni_statistik.txt
odezvdavaci skripty/smazat/: 2. zruseni_pohledu.sql  (+2 more)
(+339 files in other folders)
