cabal-version:       >=1.10
name:                Levy2
version:             1.0.0
author:              Jakub Levy
maintainer:          jakub.levy15@gmail.com
category:            Language
build-type:          Simple

executable slepys-format
  main-is:             Main.hs
  other-modules:       Common, Parser, SlepysLexer, SlepysParser, SlepysPrettifier, SlepysSemantic, StringParser, SymbolTable, TokenParser
  build-depends:       base, mtl, filepath, directory
  hs-source-dirs:      src
  default-language:    Haskell2010
